# Birju.AI-v2

backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
backend/src/: firestore_db.py  utils.py
backend/src/llms/: google_llm.py
backend/src/nodes/: career_node.py  quiz_node.py  roadmap_node.py
backend/src/routers/: counsel.py  quiz.py  roadmap.py  users.py
backend/src/states/: roadmap_state.py  user_state.py
docs/: README.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AuthModal.jsx  GlobeAnimation.tsx  HelpGuide.tsx  MainContent.tsx  MainContentSkeleton.tsx  NewCounselFormModal.tsx  NewRoadmapFormModal.tsx  QuizDetails.tsx  Sidebar.tsx  useCounseling.ts  useQuizDetails.ts  useRoadmap.ts  userDetails.ts
frontend/app/components/data/: helpData.json
