[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "gunicorn",
    "langchain",
    "langchain-groq",
    "langchain-community",
    "langchain-core",
    "langgraph",
    "langgraph-cli[inmem]",
    "langchain-google-genai",
    "python-dotenv",
    "bcrypt",
    "pydantic[email]",
    "PyJWT",
    "google-cloud-firestore",
    "google-generativeai"
]
